# lox-interpreter

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Containerfile  README.md
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  expr.cpp  interpreter.cpp  lexer.cpp  main.cpp  token_types.cpp
syntax_samples/: sample1.lox  sample2.lox  sample2.lox~
